k8_manifest_file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: backend.dilipdevsecops.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:  
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: 
                  number: 8081
